@@ -32,7 +32,7 @@ AM_CCASFLAGS += @FLAG_M64@
 
 defcfaexpr_SOURCES	= defcfaexpr.S
 defcfaexpr_CFLAGS	= $(AM_CFLAGS) @FLAG_NO_PIE@ 
-reallocarray_CFLAGS	= $(AM_CFLAGS) @FLAG_W_NO_ALLOC_SIZE_LARGER_THAN@
+reallocarray_CFLAGS	= $(AM_CFLAGS) @FLAG_W_ALLOC_SIZE_LARGER_THAN@
 scalar_CFLAGS = $(AM_CFLAGS) @FLAG_W_NO_UNINITIALIZED@
 
 # Avoid linker warnings
